@@ -1,3 +1,8 @@
+2004-07-01  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
+
+	* src/util.c (mant_exp): Modulo results can be negative.
+	Aaargh!
+
 2004-06-30  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
 
 	* PATCHLEVEL: Raised to 1 in preparation of ANSI-fication.
